[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'seven_api'
authors = [
    { name = 'seven communications GmbH & Co. KG', email = 'support@seven.io' },
]
description = 'A Python wrapper for seven.io.'
readme = 'README.md'
requires-python = '>=3.4, <4'
keywords = ['cnam', 'hlr', 'mnp', 'sms', 'text2voice', 'tts']
license = { text = 'MIT' }
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3 :: Only',
]
dependencies = [
    'requests',
    'importlib-metadata; python_version<\'3.8\'',
]
dynamic = ['version']

[project.urls]
Homepage = "https://www.seven.io"
Repository = "https://github.com/seven-io/python-client.git"