[tool.poetry]
name = 'seven_api'
authors = [
    { name = 'seven communications GmbH & Co. KG', email = 'support@seven.io' },
]
description = 'A Python wrapper for seven.io.'
homepage = 'https://www.seven.io'
readme = 'README.md'
requires-python = '>=3.7, <4'
keywords = ['cnam', 'hlr', 'mnp', 'rcs', 'sms', 'text2voice', 'tts']
license = { text = 'MIT' }
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3 :: Only',
]
dependencies = [
    'requests',
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ['version']
packages = [{ include = "seven_api" }]
repository = 'https://github.com/seven-io/python-client.git'

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"